<resources>
    <string name="app_name">LetsGo</string>
    <string name="element_edit_title">Title</string>
    <string name="element_edit_usedFor">e.g. Biceps</string>
    <string name="element_edit_thumbnail_url">Link to picture</string>
    <string name="element_edit_video_url">Youtube Video ID</string>
    <string name="pick_image_intent_text">IntentText</string>
    <string name="element_material_edit_text">eg. 10kg weights</string>
    <string name="element_detail_material_header">Materials: </string>
    <string name="element_edit_usedFor_more">+1</string>
    <string name="element_edit_usedFor_add">Edit #</string>
    <string name="element_edit_material_add">Add</string>
    <string name="element_edit_save">Save</string>
    <string name="element_edit_shortDesc">Type a short description here...</string>
    <string name="element_edit_cancel">Cancel</string>

    <string name="do_activity_finish">FINISH</string>
    <string name="element_edit_dialog_hint">How many people are needed to do this successfully?</string>

    <string-array name="multiplier_type_array">
        <item>x</item> <!-- First in this array is default! -->
        <item>s.</item> <!-- Second must be seconds -->
        <item>Min.</item> <!-- Third must be minutes -->
        <item>Hrs.</item>  <!-- Third must be hours -->
        <item>Days</item>
        <item>Mtrs.</item>
    </string-array>

    <!-- For Modul List-->
    <string name="modul_list_header">Modules</string>
    <string name="modul_list_filter_by_creator">Created by:</string>

    <!-- For Modul List Items -->
    <string name="modul_list_item_share">Share</string>
    <string name="modul_list_item_do">Do</string>
    <string name="modul_list_item_more_info">More info</string>

    <string name="add_modul_rating_pleaserate">How much did you like it?</string>
    <string name="add_modul_rating_rateFirst">Please give a rating first</string>


    <!-- For Picture Uploads -->
    <string name="picture_upload_failed">Your picture Upload failed, please try again</string>

    <!-- For Modul Detaiol Views -->
    <string name="modul_detail_elements_tab_title">Elements</string>

    <!-- For User Creation -->
    <string name="user_creation_name_info">Username:</string>
    <string name="user_creation_saved_successfully">Saved successfully!</string>

    <!-- For Modul Edit -->
    <string name="modul_edit_duplicated">The selected elements have been duplicated</string>

    <!-- For Modul Done Info -->
    <string name="modul_DI_addPicture">Add a picture here</string>
    <string name="modul_DI_comment">Write something about your experience</string>
</resources>
