<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/ll_modul_list_item">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_modul_list_modul_title"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="32sp"
                android:text="test"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_modul_list_creator_name"
                android:textSize="12sp"
                android:text="by Yannis Beuke"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_modul_list_usedFor_chips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RatingBar
                android:id="@+id/rb_modul_list_item"
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars ="5"
                style="?android:attr/ratingBarStyleSmall"/>
            <TextView
                android:id="@+id/tv_modul_list_item_number_votes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="1000 Votes"
                android:textSize="12sp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="end">
                <TextView
                    android:id="@+id/tv_modul_list_item_avg_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="~ 10min"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_access_time_black_24dp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_modul_list_item_do"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_height="match_parent"
            android:text="@string/modul_list_item_do"
            android:backgroundTint="@color/fui_bgGoogle"
            app:iconTint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            app:icon="@drawable/baseline_play_arrow_black_24dp"
            app:iconGravity="textStart"
            app:cornerRadius="0dp"
            android:layout_marginBottom="0dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_modul_list_item_share"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_height="match_parent"
            android:backgroundTint="@color/fui_bgGoogle"
            app:iconTint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:text="@string/modul_list_item_share"
            app:icon="@drawable/ic_share_black_24dp"
            app:iconGravity="textStart"
            app:cornerRadius="0dp"
            android:layout_marginBottom="0dp"
 />
        <TextView
            android:id="@+id/tv_modul_list_item_more_info"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/modul_list_item_more_info"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"/>


</LinearLayout>