<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/col_activity_modul_DI_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/ll_modul_DI_rating"
        android:visibility="visible"
        android:layout_marginTop="4dp"
        android:layout_marginStart="4dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="64dp"
            android:id="@+id/tv_add_modul_rating_header"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:text="@string/add_modul_rating_pleaserate" />

        <RatingBar
            android:id="@+id/rb_modul_rating"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:numStars ="5"
            android:stepSize="0.5"
            android:layout_marginTop="64dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_modul_DI_toggleHelper"
        android:visibility="gone">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/cl_modul_DI_layout"
            >
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:id="@+id/iv_modul_DI_userpic"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:src="@color/colorSecondary"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_modul_DI_username"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/iv_modul_DI_userpic"
                android:text="username"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_modul_DI_comment"
                app:layout_constraintTop_toBottomOf="@id/iv_modul_DI_userpic"
                app:layout_constraintLeft_toLeftOf="parent"
                android:hint="@string/modul_DI_comment"
                android:textSize="24sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ll_modul_DI_addpicture"
                app:layout_constraintTop_toBottomOf="@id/et_modul_DI_comment"
                android:orientation="horizontal">
                <ImageButton
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:id="@+id/ib_modul_DI_addpicture"
                    android:src="@color/colorSecondary"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="225dp"
                    android:id="@+id/iv_modul_DI_picture"
                    android:src="@color/colorSecondary"
                    android:visibility="gone"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_modul_DI_addpicture"
                    android:text="@string/modul_DI_addPicture"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/ll_modul_DI_addpicture"
                android:layout_marginTop="8dp"
                >
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/iv_modul_DI_thumb"
                    android:src="@mipmap/ic_launcher_round"/>
                <ProgressBar
                    android:id="@+id/pb_modul_list_modul_picture_load"
                    android:layout_width="@dimen/element_thumbnail_dimens"
                    android:layout_height="@dimen/element_thumbnail_dimens"
                    android:layout_marginEnd="5dp"
                    android:visibility="gone"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_modul_DI_modul_title"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:textAlignment="viewStart"
                        android:gravity="start"
                        android:textSize="16sp"
                        android:text="Morning Routine"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textColor="@color/colorPrimaryHeader"
                        />
                    <RatingBar
                        android:id="@+id/rb_modul_DI"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:isIndicator="true"
                        android:progressTint="@color/colorPrimaryDark"
                        android:numStars="5" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:id="@+id/iv_modul_DI_duration_clock"
                            android:layout_width="wrap_content"
                            android:layout_height="18dp"
                            android:layout_marginStart="2dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_access_time_secondary_24dp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_modul_DI_duration"
                            android:textAlignment="viewStart"
                            android:gravity="start"
                            android:textSize="12sp"
                            android:text="25 min"
                            android:textColor="@color/colorPrimaryText"/>


                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bar_add_modul_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:backgroundTint="@color/colorPrimary"
        app:fabAlignmentMode="center"
        app:hideOnScroll="true"
        app:layout_scrollFlags="scroll|enterAlways"
        />
    <!-- TODO den könnte man individuell (Form)im Sinne des Logos designen -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_modul_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_save_black_24dp"
        app:layout_anchor="@id/bar_add_modul_rating"
        app:backgroundTint="@color/browser_actions_bg_grey"
        />
</androidx.coordinatorlayout.widget.CoordinatorLayout>